--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,7 +116,7 @@ a {
   padding-bottom: 20px;
 }
 
-.text-shadow {
+.box-shadow {
   position: relative;
   box-shadow: 0px 0px 10px rgb(79, 79, 79) !important;
   margin-bottom: 10px;
@@ -124,4 +124,9 @@ a {
 
 .text-center {
   text-align: center;
+}
+
+
+.w-100{
+  width: 100%;
 }
